--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,6 +3,14 @@
 
 @string{aps = {American Physical Society,}}
 
+@inproceedings{nottebaum2024lowformer,
+  title={LowFormer: Hardware Efficient Design for Convolutional Transformer Backbones},
+  author={Nottebaum, Moritz and Dunnhofer, Matteo and Micheloni, Christian},
+  booktitle={IEEE/CVF Winter Conference on Applications of Computer Vision (WACV)},
+  year={2025},
+  arxiv={https://arxiv.org/abs/2409.03460}
+}
+
 @article{dunnhofer2024visual,
   title={Visual tracking in camera-switching outdoor sport videos: Benchmark and baselines for skiing},
   author={Dunnhofer, Matteo and Micheloni, Christian},
@@ -15,193 +23,65 @@
   selected={true}
 }
 
-@inproceedings{martinel2017person,
-  title={Person re-identification via unsupervised transfer of learned visual representations},
-  author={Martinel, Niki and Dunnhofer, Matteo and Foresti, Gian Luca and Micheloni, Christian},
-  booktitle={Proceedings of the 11th International Conference on Distributed Smart Cameras},
-  doi={http://doi.org/10.1145/3131885.3131923},
-  year={2017},
-  organization={ACM}
+@inproceedings{dunnhofer2024tracking,
+  title={Tracking Skiers from the Top to the Bottom},
+  author={Dunnhofer, Matteo and Sordi, Luca and Martinel, Niki and Micheloni, Christian},
+  booktitle={IEEE/CVF Winter Conference on Applications of Computer Vision (WACV)},
+  year={2024},
+  html={https://openaccess.thecvf.com/content/WACV2024/html/Dunnhofer_Tracking_Skiers_From_the_Top_to_the_Bottom_WACV_2024_paper.html},
+  video={https://www.youtube.com/watch?v=Aos5iKrYM5o},
+  code={https://github.com/matteo-dunnhofer/SkiTB-toolkit},
+  website={https://machinelearning.uniud.it/datasets/skitb/},
+  arxiv={https://arxiv.org/abs/2312.09723}
 }
 
-@inproceedings{chini2018unsupervised,
-  title={Unsupervised Smoke Detection in Normally Smoking Environments},
-  author={Chini, Matteo and Martinel, Niki and Dunnhofer, Matteo and Ceschia, Carlo and Micheloni, Christian},
-  booktitle={Proceedings of the 12th International Conference on Distributed Smart Cameras},
-  doi={https://doi.org/10.1145/3243394.3243699},
-  year={2018},
-  organization={ACM}
-}
-
-@inproceedings{camps2018one,
-  title={One-class Gaussian process regressor for quality assessment of transperineal ultrasound images},
-  author={Camps, Saskia and Houben, Tim and Fontanarosa, Davide and Edwards, Christopher and Antico, Maria and Dunnhofer, Matteo and Martens, Esther and Baeza, Jose and Vanneste, Ben and van Limbergen, Evert and others},
-  booktitle={International Conference on Medical Imaging with Deep Learning (MIDL) 2018},
-  html={https://openreview.net/forum?id=r1s0gx3iG},
-  year={2018}
-}
-
-@inproceedings{camps2018quality,
-  title={Quality assessment of transperineal ultrasound images of the male pelvic region using deep learning},
-  author={Camps, Saskia and Houben, Tim and Edwards, Christopher and Antico, Maria and Dunnhofer, Matteo and Martens, Esther and Baeza, Jose and Vanneste, Hen and van Limbergen, Evert and de With, Peter and others},
-  booktitle={2018 IEEE International Ultrasonics Symposium (IUS)},
-  doi={https://ieeexplore.ieee.org/document/8579839},
-  year={2018},
-}
-
-@inproceedings{dunnhofer2019visual,
-  title={Visual Tracking by means of Deep Reinforcement Learning and an Expert Demonstrator},
-  author={Dunnhofer, Matteo and Martinel, Niki and Luca Foresti, Gian and Micheloni, Christian},
-  booktitle={IEEE/CVF International Conference on Computer Vision (ICCV) 2019, Visual Object Tracking Challenge VOT2019 workshop},
-  html={http://openaccess.thecvf.com/content_ICCVW_2019/html/VOT/Dunnhofer_Visual_Tracking_by_Means_of_Deep_Reinforcement_Learning_and_an_ICCVW_2019_paper.html},
-  arxiv={https://arxiv.org/abs/1909.08487},
-  video={ttps://youtu.be/jSGLafk4-G4},
-  poster={https://drive.google.com/file/d/1TLq1UtptYcSr2wMEnRfIatCZJpwV7Z88/view?usp=sharing},
-  year={2019},
-  selected={true}
-}
-
-@inproceedings{kristan2019seventh,
-  title={The seventh visual object tracking vot2019 challenge results},
-  author={Kristan, Matej and Matas, Jiri and Leonardis, Ales and Felsberg, Michael and Pflugfelder, Roman and Kamarainen, Joni-Kristian and ˇCehovin Zajc, Luka and Drbohlav, Ondrej and Lukezic, Alan and Berg, Amanda and others},
-  booktitle={IEEE/CVF International Conference on Computer Vision (ICCV) 2019, Visual Object Tracking Challenge VOT2019 workshop},
-  html={http://openaccess.thecvf.com/content_ICCVW_2019/html/VOT/Kristan_The_Seventh_Visual_Object_Tracking_VOT2019_Challenge_Results_ICCVW_2019_paper.html},
-  year={2019}
-}
-
-@article{dunnhofer2020siam,
-  title={Siam-U-Net: encoder-decoder siamese network for knee cartilage tracking in ultrasound images},
-  author={Dunnhofer, Matteo and Antico, Maria and Sasazawa, Fumio and Takeda, Yu and Camps, Saskia and Martinel, Niki and Micheloni, Christian and Carneiro, Gustavo and Fontanarosa, Davide},
-  journal={Medical Image Analysis},
-  html={https://www.sciencedirect.com/science/article/abs/pii/S1361841519301677},
-  video={https://youtu.be/nYTlEyMoj0s},
-  year={2020},
-  publisher={Elsevier},
-  selected={true}
-}
-
-@article{antico2020deep,
-  title={Deep Learning-Based Femoral Cartilage Automatic Segmentation in Ultrasound Imaging for Guidance in Robotic Knee Arthroscopy},
-  author={Antico, M and Sasazawa, F and Dunnhofer, M and Camps, SM and Jaiprakash, AT and Pandey, AK and Crawford, R and Carneiro, G and Fontanarosa, D},
-  journal={Ultrasound in Medicine \& Biology},
-  html={https://www.sciencedirect.com/science/article/abs/pii/S0301562919315522},
-  year={2020},
-}
-
-@article{camps2020automatic,
-  title={Automatic Quality Assessment of Transperineal Ultrasound Images of the Male Pelvic Region, Using Deep Learning},
-  author={Camps, SM and Houben, T and Carneiro, G and Edwards, C and Antico, M and Dunnhofer, M and Martens, EGHJ and Baeza, JA and Vanneste, BGL and van Limbergen, EJ and others},
-  journal={Ultrasound in Medicine \& Biology},
-  html={https://www.sciencedirect.com/science/article/abs/pii/S0301562919315649},
-  year={2020},
-}
-
-@inproceedings{dunnhofer2020tracking,
-  title={Tracking-by-Trackers with a Distilled and Reinforced Model},
-  author={Dunnhofer, Matteo and Martinel, Niki and Micheloni, Christian},
-  booktitle={Asian Conference on Computer Vision (ACCV) 2020},
-  year={2020},
-  html={https://openaccess.thecvf.com/content/ACCV2020/html/Dunnhofer_Tracking-by-Trackers_with_a_Distilled_and_Reinforced_Model_ACCV_2020_paper.html},
-  video={https://youtu.be/VzeoHQQl-rA},
-  code={https://github.com/matteo-dunnhofer/vot-kd-rl},
-  website={https://accv2020.github.io/miniconf/poster_141.html},
-  arxiv={https://arxiv.org/abs/2007.04108},
-  selected={true}
-}
-
-@inproceedings{kristan2020eighth,
-  title={The eighth visual object tracking VOT2020 challenge results},
-  author={Kristan, Matej and Leonardis, Ale{\v{s}} and Matas, Ji{\v{r}}{\'\i} and Felsberg, Michael and Pflugfelder, Roman and K{\"a}m{\"a}r{\"a}inen, Joni-Kristian and Danelljan, Martin and Zajc, Luka {\v{C}}ehovin and Luke{\v{z}}i{\v{c}}, Alan and Drbohlav, Ondrej and others},
-  booktitle={European Conference on Computer Vision (ECCV) 2020, Visual Object Tracking Challenge VOT2020 workshop},
-  html={https://link.springer.com/chapter/10.1007/978-3-030-68238-5_39},
-  year={2020},
-  organization={Springer, Cham}
-}
-
-@inproceedings{dunnhofer2020exploration,
-  title={An Exploration of Target-Conditioned Segmentation Methods for Visual Object Trackers},
-  author={Dunnhofer, Matteo and Martinel, Niki and Micheloni, Christian},
-  booktitle={European Conference on Computer Vision (ECCV) 2020, Visual Object Tracking Challenge VOT2020 workshop},
-  html={https://link.springer.com/chapter/10.1007%2F978-3-030-68238-5_41},
-  arxiv={http://arxiv.org/abs/2008.00992},
-  video={https://youtu.be/9af8zsoXeE8},
-  year={2020},
-  organization={Springer, Cham}
-}
-
-@article{dunnhofer2021weakly,
-  title={Weakly-Supervised Domain Adaptation of Deep Regression Trackers via Reinforced Knowledge Distillation},
-  author={Dunnhofer, Matteo and Martinel, Niki and Micheloni, Christian},
-  journal={IEEE Robotics and Automation Letters},
-  html={https://ieeexplore.ieee.org/document/9394708},
-  video={https://youtu.be/3T3BJudDSwQ},
-  arxiv={http://arxiv.org/abs/2103.14496},
-  year={2021},
-  publisher={IEEE},
-  selected={true}
-}
-
-@article{martinel2021lord,
-  title={Lord of the Rings: Hanoi Pooling and Self-Knowledge Distillation for Fast and Accurate Vehicle Re-Identification},
-  author={Martinel, Niki and Dunnhofer, Matteo and Pucci, Rita and Foresti, Gian Luca and Micheloni, Christian},
-  journal={IEEE Transactions on Industrial Informatics},
-  html={https://ieeexplore.ieee.org/document/9387157},
-  year={2021},
-  publisher={IEEE}
-}
-
-@article{miani2021surrogate,
-  title={Surrogate Safety Measures Prediction at Multiple Timescales in V2P Conflicts Based on Gated Recurrent Unit},
-  author={Miani, Matteo and Dunnhofer, Matteo and Micheloni, Christian and Marini, Andrea and Baldo, Nicola},
-  journal={Sustainability},
-  html={https://www.mdpi.com/2071-1050/13/17/9681},
-  year={2021},
-  publisher={Multidisciplinary Digital Publishing Institute}
-}
-
-@article{miani2021bituminous,
-  title={Bituminous Mixtures Experimental Data Modeling Using a Hyperparameters-Optimized Machine Learning Approach},
-  author={Miani, Matteo and Dunnhofer, Matteo and Rondinella, Fabio and Manthos, Evangelos and Valentin, Jan and Micheloni, Christian and Baldo, Nicola},
-  journal={Applied Sciences},
-  html={https://www.mdpi.com/1397732},
-  year={2021},
-  publisher={Multidisciplinary Digital Publishing Institute}
-}
-
-@inproceedings{dunnhofer2021improving,
-  title={Improving MRI-based knee disorder diagnosis with pyramidal feature details},
-  author={Dunnhofer, Matteo and Martinel, Niki and Micheloni, Christian},
-  booktitle={International Conference on Medical Imaging with Deep Learning (MIDL) 2021},
-  html={https://openreview.net/forum?id=7psPmlNffvg},
-  video={https://www.youtube.com/watch?v=XkHiyNDK2Xk},
-  poster={https://drive.google.com/file/d/1dd3WkrKA3DbC_PQuiAQ8vTe4j2MxBhLM/view?usp=sharing},
-  code={https://github.com/matteo-dunnhofer/MRPyrNet},
-  website={https://2021.midl.io/papers/j6},
-  year={2021},
-  organization={PMLR},
+@article{dunnhofer2023visual,
+  title={Visual Object Tracking in First Person Vision},
+  author={Dunnhofer, Matteo and Furnari, Antonino and Farinella, Giovanni Maria and Micheloni, Christian},
+  journal={International Journal of Computer Vision},
+  html={https://link.springer.com/article/10.1007/s11263-022-01694-6},
+  arxiv={https://arxiv.org/abs/2209.13502},
+  code={https://github.com/matteo-dunnhofer/TREK-150-toolkit},
+  website={https://machinelearning.uniud.it/datasets/trek150/},
+  year={2023},
+  publisher={Springer},
   selected={true},
 }
 
-@inproceedings{dunnhofer2021first,
-  title={Is First Person Vision Challenging for Object Tracking?},
-  author={Dunnhofer, Matteo and Furnari, Antonino and Farinella, Giovanni Maria and Micheloni, Christian},
-  booktitle={IEEE/CVF International Conference on Computer Vision (ICCV) 2021, Visual Object Tracking Challenge VOT2021 workshop},
-  html={},
-  video={https://www.youtube.com/watch?v=oX1nICHgEJM},
-  arxiv={https://arxiv.org/abs/2108.13665},
-  code={https://github.com/matteo-dunnhofer/TREK-150-toolkit},
-  website={https://machinelearning.uniud.it/datasets/trek150/},
-  year={2021}
+@inproceedings{dunnhofer2023visualizing,
+  title={Visualizing Skiers' Trajectories in Monocular Videos},
+  author={Dunnhofer, Matteo and Sordi, Luca and Micheloni, Christian},
+  booktitle={IEEE/CVF Conference on Computer Vision and Pattern Recognition (CVPR), CVsports workshop},
+  html={https://openaccess.thecvf.com/content/CVPR2023W/CVSports/html/Dunnhofer_Visualizing_Skiers_Trajectories_in_Monocular_Videos_CVPRW_2023_paper.html},
+  video={https://youtu.be/JPQ6EeOaon0},
+  arxiv={https://arxiv.org/abs/2304.02994},
+  website={https://machinelearning.uniud.it/projects/eyof2023/},
+  year={2023},
+  selected={true}
 }
 
-@inproceedings{kristan2021ninth,
-  title={The Ninth Visual Object Tracking VOT2021 Challenge Results},
-  author={Kristan, Matej and Matas, Ji{\v{r}}{\'\i} and Leonardis, Ale{\v{s}} and Felsberg, Michael and Pflugfelder, Roman and K{\"a}m{\"a}r{\"a}inen, Joni-Kristian and Chang, Hyung Jin and Danelljan, Martin and Cehovin, Luka and Luke{\v{z}}i{\v{c}}, Alan and others},
-  booktitle={Proceedings of the IEEE/CVF International Conference on Computer Vision},
-  html={https://openaccess.thecvf.com/content/ICCV2021W/VOT/html/Kristan_The_Ninth_Visual_Object_Tracking_VOT2021_Challenge_Results_ICCVW_2021_paper.html},
-  year={2021},
-  video={https://youtu.be/OvgKHj7lH9c},
-  code={http://data.votchallenge.net/vot2021/trackers/mlpLT-code-2021-05-28T15_09_23.381777.zip}
+@inproceedings{dunnhofer2023automatic,
+  title={Automatic Video-Based Reconstruction of the Trajectories Performed by Skiers},
+  author={Dunnhofer, Matteo and Micheloni, Christian},
+  booktitle={9th International Congress on Science and Skiing (ICSS)},
+  year={2023}
+}
+
+@inproceedings{khan2023lbkenet,
+  title={LBKENet: Lightweight Blur Kernel Estimation Network for Blind Image Super-Resolution},
+  author={Khan, Asif Hussain and Umer, Rao Muhammad and Dunnhofer, Matteo and Micheloni, Christian and Martinel, Niki},
+  booktitle={International Conference on Image Analysis and Processing (ICIAP)},
+  html={},
+  year={2023},
+  organization={Springer}
+}
+
+@inproceedings{kristan2023first,
+  title={The First Visual Object Tracking Segmentation VOTS2023 Challenge Results},
+  author={Kristan, Matej and Matas, Ji{\v{r}}{\'\i} and Danelljan, Martin and Felsberg, Michael and Chang, Hyung Jin and Zajc, Luka {\v{C}}ehovin and Luke{\v{z}}i{\v{c}}, Alan and Drbohlav, Ondrej and Zhang, Zhongqun and Tran, Khanh-Tung and others},
+  booktitle={Proceedings of the IEEE/CVF International Conference on Computer Vision (ICCV), Visual Object Tracking Segmentation Challenge VOTS2023 workshop},
+  html={https://openaccess.thecvf.com/content/ICCV2023W/VOTS/html/Kristan_The_First_Visual_Object_Tracking_Segmentation_VOTS2023_Challenge_Results_ICCVW_2023_paper.html},
+  year={2023}
 }
 
 @article{miani2022young,
@@ -245,7 +125,7 @@
 @inproceedings{dunnhofer2022cocolot,
   title={CoCoLoT: Combining Complementary Trackers in Long-Term Visual Tracking},
   author={Dunnhofer, Matteo and Micheloni, Christian},
-  booktitle={International Conference on Pattern Recognition (ICPR) 2022},
+  booktitle={International Conference on Pattern Recognition (ICPR)},
   html={https://ieeexplore.ieee.org/document/9956082},
   arxiv={https://arxiv.org/abs/2205.04261},
   code={https://github.com/matteo-dunnhofer/CoCoLoT},
@@ -256,79 +136,201 @@
 @inproceedings{kristan2022tenth,
   title={The tenth visual object tracking vot2022 challenge results},
   author={Kristan, Matej and Leonardis, Ale{\v{s}} and Matas, Ji{\v{r}}{\'\i} and Felsberg, Michael and Pflugfelder, Roman and K{\"a}m{\"a}r{\"a}inen, Joni-Kristian and Chang, Hyung Jin and Danelljan, Martin and Zajc, Luka {\v{C}}ehovin and Luke{\v{z}}i{\v{c}}, Alan and others},
-  booktitle={European Conference on Computer Vision (ECCV) 2022, Visual Object Tracking Challenge VOT2022 workshop},
+  booktitle={European Conference on Computer Vision (ECCV), Visual Object Tracking Challenge VOT2022 workshop},
   html={https://link.springer.com/chapter/10.1007/978-3-031-25085-9_25},
   year={2022},
   organization={Springer Nature Switzerland}
 }
 
-@article{dunnhofer2023visual,
-  title={Visual Object Tracking in First Person Vision},
-  author={Dunnhofer, Matteo and Furnari, Antonino and Farinella, Giovanni Maria and Micheloni, Christian},
-  journal={International Journal of Computer Vision},
-  html={https://link.springer.com/article/10.1007/s11263-022-01694-6},
-  arxiv={https://arxiv.org/abs/2209.13502},
-  code={https://github.com/matteo-dunnhofer/TREK-150-toolkit},
-  website={https://machinelearning.uniud.it/datasets/trek150/},
-  year={2023},
-  publisher={Springer},
-  selected={true},
-}
 
-@inproceedings{dunnhofer2023visualizing,
-  title={Visualizing Skiers' Trajectories in Monocular Videos},
-  author={Dunnhofer, Matteo and Sordi, Luca and Micheloni, Christian},
-  booktitle={IEEE/CVF Conference on Computer Vision and Pattern Recognition (CVPR) 2023, CVsports workshop},
-  html={https://openaccess.thecvf.com/content/CVPR2023W/CVSports/html/Dunnhofer_Visualizing_Skiers_Trajectories_in_Monocular_Videos_CVPRW_2023_paper.html},
-  video={https://youtu.be/JPQ6EeOaon0},
-  arxiv={https://arxiv.org/abs/2304.02994},
-  website={https://machinelearning.uniud.it/projects/eyof2023/},
-  year={2023},
+@article{dunnhofer2021weakly,
+  title={Weakly-Supervised Domain Adaptation of Deep Regression Trackers via Reinforced Knowledge Distillation},
+  author={Dunnhofer, Matteo and Martinel, Niki and Micheloni, Christian},
+  journal={IEEE Robotics and Automation Letters},
+  html={https://ieeexplore.ieee.org/document/9394708},
+  video={https://youtu.be/3T3BJudDSwQ},
+  arxiv={http://arxiv.org/abs/2103.14496},
+  year={2021},
+  publisher={IEEE},
   selected={true}
 }
 
-@inproceedings{dunnhofer2023automatic,
-  title={Automatic Video-Based Reconstruction of the Trajectories Performed by Skiers},
-  author={Dunnhofer, Matteo and Micheloni, Christian},
-  booktitle={9th International Congress on Science and Skiing (ICSS)},
-  year={2023}
+@article{martinel2021lord,
+  title={Lord of the Rings: Hanoi Pooling and Self-Knowledge Distillation for Fast and Accurate Vehicle Re-Identification},
+  author={Martinel, Niki and Dunnhofer, Matteo and Pucci, Rita and Foresti, Gian Luca and Micheloni, Christian},
+  journal={IEEE Transactions on Industrial Informatics},
+  html={https://ieeexplore.ieee.org/document/9387157},
+  year={2021},
+  publisher={IEEE}
 }
 
-@inproceedings{khan2023lbkenet,
-  title={LBKENet: Lightweight Blur Kernel Estimation Network for Blind Image Super-Resolution},
-  author={Khan, Asif Hussain and Umer, Rao Muhammad and Dunnhofer, Matteo and Micheloni, Christian and Martinel, Niki},
-  booktitle={International Conference on Image Analysis and Processing},
+@article{miani2021surrogate,
+  title={Surrogate Safety Measures Prediction at Multiple Timescales in V2P Conflicts Based on Gated Recurrent Unit},
+  author={Miani, Matteo and Dunnhofer, Matteo and Micheloni, Christian and Marini, Andrea and Baldo, Nicola},
+  journal={Sustainability},
+  html={https://www.mdpi.com/2071-1050/13/17/9681},
+  year={2021},
+  publisher={Multidisciplinary Digital Publishing Institute}
+}
+
+@article{miani2021bituminous,
+  title={Bituminous Mixtures Experimental Data Modeling Using a Hyperparameters-Optimized Machine Learning Approach},
+  author={Miani, Matteo and Dunnhofer, Matteo and Rondinella, Fabio and Manthos, Evangelos and Valentin, Jan and Micheloni, Christian and Baldo, Nicola},
+  journal={Applied Sciences},
+  html={https://www.mdpi.com/1397732},
+  year={2021},
+  publisher={Multidisciplinary Digital Publishing Institute}
+}
+
+@inproceedings{dunnhofer2021improving,
+  title={Improving MRI-based knee disorder diagnosis with pyramidal feature details},
+  author={Dunnhofer, Matteo and Martinel, Niki and Micheloni, Christian},
+  booktitle={International Conference on Medical Imaging with Deep Learning (MIDL)},
+  html={https://openreview.net/forum?id=7psPmlNffvg},
+  video={https://www.youtube.com/watch?v=XkHiyNDK2Xk},
+  poster={https://drive.google.com/file/d/1dd3WkrKA3DbC_PQuiAQ8vTe4j2MxBhLM/view?usp=sharing},
+  code={https://github.com/matteo-dunnhofer/MRPyrNet},
+  website={https://2021.midl.io/papers/j6},
+  year={2021},
+  organization={PMLR},
+  selected={true},
+}
+
+@inproceedings{dunnhofer2021first,
+  title={Is First Person Vision Challenging for Object Tracking?},
+  author={Dunnhofer, Matteo and Furnari, Antonino and Farinella, Giovanni Maria and Micheloni, Christian},
+  booktitle={IEEE/CVF International Conference on Computer Vision (ICCV), Visual Object Tracking Challenge VOT2021 workshop},
   html={},
-  year={2023},
-  organization={Springer}
+  video={https://www.youtube.com/watch?v=oX1nICHgEJM},
+  arxiv={https://arxiv.org/abs/2108.13665},
+  code={https://github.com/matteo-dunnhofer/TREK-150-toolkit},
+  website={https://machinelearning.uniud.it/datasets/trek150/},
+  year={2021}
 }
 
-@inproceedings{kristan2023first,
-  title={The First Visual Object Tracking Segmentation VOTS2023 Challenge Results},
-  author={Kristan, Matej and Matas, Ji{\v{r}}{\'\i} and Danelljan, Martin and Felsberg, Michael and Chang, Hyung Jin and Zajc, Luka {\v{C}}ehovin and Luke{\v{z}}i{\v{c}}, Alan and Drbohlav, Ondrej and Zhang, Zhongqun and Tran, Khanh-Tung and others},
-  booktitle={Proceedings of the IEEE/CVF International Conference on Computer Vision (ICCV) 2023, Visual Object Tracking Segmentation Challenge VOTS2023 workshop},
-  html={https://openaccess.thecvf.com/content/ICCV2023W/VOTS/html/Kristan_The_First_Visual_Object_Tracking_Segmentation_VOTS2023_Challenge_Results_ICCVW_2023_paper.html},
-  year={2023}
+@inproceedings{kristan2021ninth,
+  title={The Ninth Visual Object Tracking VOT2021 Challenge Results},
+  author={Kristan, Matej and Matas, Ji{\v{r}}{\'\i} and Leonardis, Ale{\v{s}} and Felsberg, Michael and Pflugfelder, Roman and K{\"a}m{\"a}r{\"a}inen, Joni-Kristian and Chang, Hyung Jin and Danelljan, Martin and Cehovin, Luka and Luke{\v{z}}i{\v{c}}, Alan and others},
+  booktitle={IEEE/CVF International Conference on Computer Vision (ICCV), Visual Object Tracking Challenge VOT2021 workshop},
+  html={https://openaccess.thecvf.com/content/ICCV2021W/VOT/html/Kristan_The_Ninth_Visual_Object_Tracking_VOT2021_Challenge_Results_ICCVW_2021_paper.html},
+  year={2021},
+  video={https://youtu.be/OvgKHj7lH9c},
+  code={http://data.votchallenge.net/vot2021/trackers/mlpLT-code-2021-05-28T15_09_23.381777.zip}
 }
 
-@inproceedings{dunnhofer2024tracking,
-  title={Tracking Skiers from the Top to the Bottom},
-  author={Dunnhofer, Matteo and Sordi, Luca and Martinel, Niki and Micheloni, Christian},
-  booktitle={IEEE/CVF Winter Conference on Applications of Computer Vision (WACV) 2024},
-  year={2024},
-  html={https://openaccess.thecvf.com/content/WACV2024/html/Dunnhofer_Tracking_Skiers_From_the_Top_to_the_Bottom_WACV_2024_paper.html},
-  video={https://www.youtube.com/watch?v=Aos5iKrYM5o},
-  code={https://github.com/matteo-dunnhofer/SkiTB-toolkit},
-  website={https://machinelearning.uniud.it/datasets/skitb/},
-  arxiv={https://arxiv.org/abs/2312.09723}
+@article{dunnhofer2020siam,
+  title={Siam-U-Net: encoder-decoder siamese network for knee cartilage tracking in ultrasound images},
+  author={Dunnhofer, Matteo and Antico, Maria and Sasazawa, Fumio and Takeda, Yu and Camps, Saskia and Martinel, Niki and Micheloni, Christian and Carneiro, Gustavo and Fontanarosa, Davide},
+  journal={Medical Image Analysis},
+  html={https://www.sciencedirect.com/science/article/abs/pii/S1361841519301677},
+  video={https://youtu.be/nYTlEyMoj0s},
+  year={2020},
+  publisher={Elsevier},
+  selected={true}
 }
 
-@inproceedings{nottebaum2024lowformer,
-  title={LowFormer: Hardware Efficient Design for Convolutional Transformer Backbones},
-  author={Nottebaum, Moritz and Dunnhofer, Matteo and Micheloni, Christian},
-  booktitle={IEEE/CVF Winter Conference on Applications of Computer Vision (WACV) 2025},
-  year={2025},
-  arxiv={https://arxiv.org/abs/2409.03460}
+@article{antico2020deep,
+  title={Deep Learning-Based Femoral Cartilage Automatic Segmentation in Ultrasound Imaging for Guidance in Robotic Knee Arthroscopy},
+  author={Antico, M and Sasazawa, F and Dunnhofer, M and Camps, SM and Jaiprakash, AT and Pandey, AK and Crawford, R and Carneiro, G and Fontanarosa, D},
+  journal={Ultrasound in Medicine \& Biology},
+  html={https://www.sciencedirect.com/science/article/abs/pii/S0301562919315522},
+  year={2020},
 }
+
+@article{camps2020automatic,
+  title={Automatic Quality Assessment of Transperineal Ultrasound Images of the Male Pelvic Region, Using Deep Learning},
+  author={Camps, SM and Houben, T and Carneiro, G and Edwards, C and Antico, M and Dunnhofer, M and Martens, EGHJ and Baeza, JA and Vanneste, BGL and van Limbergen, EJ and others},
+  journal={Ultrasound in Medicine \& Biology},
+  html={https://www.sciencedirect.com/science/article/abs/pii/S0301562919315649},
+  year={2020},
+}
+
+@inproceedings{dunnhofer2020tracking,
+  title={Tracking-by-Trackers with a Distilled and Reinforced Model},
+  author={Dunnhofer, Matteo and Martinel, Niki and Micheloni, Christian},
+  booktitle={Asian Conference on Computer Vision (ACCV)},
+  year={2020},
+  html={https://openaccess.thecvf.com/content/ACCV2020/html/Dunnhofer_Tracking-by-Trackers_with_a_Distilled_and_Reinforced_Model_ACCV_2020_paper.html},
+  video={https://youtu.be/VzeoHQQl-rA},
+  code={https://github.com/matteo-dunnhofer/vot-kd-rl},
+  website={https://accv2020.github.io/miniconf/poster_141.html},
+  arxiv={https://arxiv.org/abs/2007.04108},
+  selected={true}
+}
+
+@inproceedings{kristan2020eighth,
+  title={The eighth visual object tracking VOT2020 challenge results},
+  author={Kristan, Matej and Leonardis, Ale{\v{s}} and Matas, Ji{\v{r}}{\'\i} and Felsberg, Michael and Pflugfelder, Roman and K{\"a}m{\"a}r{\"a}inen, Joni-Kristian and Danelljan, Martin and Zajc, Luka {\v{C}}ehovin and Luke{\v{z}}i{\v{c}}, Alan and Drbohlav, Ondrej and others},
+  booktitle={European Conference on Computer Vision (ECCV), Visual Object Tracking Challenge VOT2020 workshop},
+  html={https://link.springer.com/chapter/10.1007/978-3-030-68238-5_39},
+  year={2020},
+  organization={Springer, Cham}
+}
+
+@inproceedings{dunnhofer2020exploration,
+  title={An Exploration of Target-Conditioned Segmentation Methods for Visual Object Trackers},
+  author={Dunnhofer, Matteo and Martinel, Niki and Micheloni, Christian},
+  booktitle={European Conference on Computer Vision (ECCV), Visual Object Tracking Challenge VOT2020 workshop},
+  html={https://link.springer.com/chapter/10.1007%2F978-3-030-68238-5_41},
+  arxiv={http://arxiv.org/abs/2008.00992},
+  video={https://youtu.be/9af8zsoXeE8},
+  year={2020},
+  organization={Springer, Cham}
+}
+
+@inproceedings{dunnhofer2019visual,
+  title={Visual Tracking by means of Deep Reinforcement Learning and an Expert Demonstrator},
+  author={Dunnhofer, Matteo and Martinel, Niki and Luca Foresti, Gian and Micheloni, Christian},
+  booktitle={IEEE/CVF International Conference on Computer Vision (ICCV), Visual Object Tracking Challenge VOT2019 workshop},
+  html={http://openaccess.thecvf.com/content_ICCVW_2019/html/VOT/Dunnhofer_Visual_Tracking_by_Means_of_Deep_Reinforcement_Learning_and_an_ICCVW_2019_paper.html},
+  arxiv={https://arxiv.org/abs/1909.08487},
+  video={ttps://youtu.be/jSGLafk4-G4},
+  poster={https://drive.google.com/file/d/1TLq1UtptYcSr2wMEnRfIatCZJpwV7Z88/view?usp=sharing},
+  year={2019},
+  selected={true}
+}
+
+@inproceedings{kristan2019seventh,
+  title={The seventh visual object tracking vot2019 challenge results},
+  author={Kristan, Matej and Matas, Jiri and Leonardis, Ales and Felsberg, Michael and Pflugfelder, Roman and Kamarainen, Joni-Kristian and ˇCehovin Zajc, Luka and Drbohlav, Ondrej and Lukezic, Alan and Berg, Amanda and others},
+  booktitle={IEEE/CVF International Conference on Computer Vision (ICCV), Visual Object Tracking Challenge VOT2019 workshop},
+  html={http://openaccess.thecvf.com/content_ICCVW_2019/html/VOT/Kristan_The_Seventh_Visual_Object_Tracking_VOT2019_Challenge_Results_ICCVW_2019_paper.html},
+  year={2019}
+}
+
+@inproceedings{chini2018unsupervised,
+  title={Unsupervised Smoke Detection in Normally Smoking Environments},
+  author={Chini, Matteo and Martinel, Niki and Dunnhofer, Matteo and Ceschia, Carlo and Micheloni, Christian},
+  booktitle={International Conference on Distributed Smart Cameras (ICDSC)},
+  doi={https://doi.org/10.1145/3243394.3243699},
+  year={2018},
+  organization={ACM}
+}
+
+@inproceedings{camps2018one,
+  title={One-class Gaussian process regressor for quality assessment of transperineal ultrasound images},
+  author={Camps, Saskia and Houben, Tim and Fontanarosa, Davide and Edwards, Christopher and Antico, Maria and Dunnhofer, Matteo and Martens, Esther and Baeza, Jose and Vanneste, Ben and van Limbergen, Evert and others},
+  booktitle={International Conference on Medical Imaging with Deep Learning (MIDL)},
+  html={https://openreview.net/forum?id=r1s0gx3iG},
+  year={2018}
+}
+
+@inproceedings{camps2018quality,
+  title={Quality assessment of transperineal ultrasound images of the male pelvic region using deep learning},
+  author={Camps, Saskia and Houben, Tim and Edwards, Christopher and Antico, Maria and Dunnhofer, Matteo and Martens, Esther and Baeza, Jose and Vanneste, Hen and van Limbergen, Evert and de With, Peter and others},
+  booktitle={IEEE International Ultrasonics Symposium (IUS)},
+  html={https://ieeexplore.ieee.org/document/8579839},
+  year={2018},
+}
+
+@inproceedings{martinel2017person,
+  title={Person re-identification via unsupervised transfer of learned visual representations},
+  author={Martinel, Niki and Dunnhofer, Matteo and Foresti, Gian Luca and Micheloni, Christian},
+  booktitle={International Conference on Distributed Smart Cameras (ICDSC)},
+  html={http://doi.org/10.1145/3131885.3131923},
+  year={2017},
+  organization={ACM}
+}
+
 
 
