--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -20,6 +20,7 @@
   website={https://machinelearning.uniud.it/datasets/skitb/},
   video={https://www.youtube.com/watch?v=Aos5iKrYM5o},
   year={2024},
+  preview={cviu2024.png},
   selected={true}
 }
 
@@ -45,6 +46,7 @@
   website={https://machinelearning.uniud.it/datasets/trek150/},
   year={2023},
   publisher={Springer},
+  preview={ijcv2023.jpg},
   selected={true},
 }
 
@@ -57,6 +59,7 @@
   arxiv={https://arxiv.org/abs/2304.02994},
   website={https://machinelearning.uniud.it/projects/eyof2023/},
   year={2023},
+  preview={cvprw2023.jpg},
   selected={true}
 }
 
@@ -101,6 +104,7 @@
   code={https://github.com/matteo-dunnhofer/CoCoLoT},
   year={2022},
   publisher={Elsevier},
+  preview={imavis2022.png},
   selected={true}
 }
 
@@ -152,6 +156,7 @@
   arxiv={http://arxiv.org/abs/2103.14496},
   year={2021},
   publisher={IEEE},
+  preview={ral2021.jpg},
   selected={true}
 }
 
@@ -193,6 +198,7 @@
   website={https://2021.midl.io/papers/j6},
   year={2021},
   organization={PMLR},
+  preview={midl2021.png},
   selected={true},
 }
 
@@ -226,6 +232,7 @@
   video={https://youtu.be/nYTlEyMoj0s},
   year={2020},
   publisher={Elsevier},
+  preview={media2020.jpg},
   selected={true}
 }
 
@@ -255,6 +262,7 @@
   code={https://github.com/matteo-dunnhofer/vot-kd-rl},
   website={https://accv2020.github.io/miniconf/poster_141.html},
   arxiv={https://arxiv.org/abs/2007.04108},
+  preview={accv2020.jpg},
   selected={true}
 }
 
@@ -287,6 +295,7 @@
   video={ttps://youtu.be/jSGLafk4-G4},
   poster={https://drive.google.com/file/d/1TLq1UtptYcSr2wMEnRfIatCZJpwV7Z88/view?usp=sharing},
   year={2019},
+  preview={iccvw2019.png},
   selected={true}
 }
 
