--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -11,6 +11,13 @@
   arxiv={https://arxiv.org/abs/2409.03460}
 }
 
+@misc{manigrasso2024onlineepisodicmemoryvisual,
+      title={Online Episodic Memory Visual Query Localization with Egocentric Streaming Object Memory}, 
+      author={Zaira Manigrasso* and Matteo Dunnhofer* and Antonino Furnari* and Moritz Nottebaum and Antonio Finocchiaro and Davide Marana and Giovanni Maria Farinella and Christian Micheloni},
+      year={2024},
+      arxiv={https://arxiv.org/abs/2411.16934}, 
+}
+
 @article{dunnhofer2024visual,
   title={Visual tracking in camera-switching outdoor sport videos: Benchmark and baselines for skiing},
   author={Dunnhofer, Matteo and Micheloni, Christian},
