prinnevot project page

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -8,7 +8,9 @@
   author={Nottebaum, Moritz and Dunnhofer, Matteo and Micheloni, Christian},
   booktitle={IEEE/CVF Winter Conference on Applications of Computer Vision (WACV)},
   year={2025},
-  arxiv={https://arxiv.org/abs/2409.03460}
+  html={https://openaccess.thecvf.com/content/WACV2025/html/Nottebaum_LowFormer_Hardware_Efficient_Design_for_Convolutional_Transformer_Backbones_WACV_2025_paper.html},
+  code={https://github.com/altair199797/LowFormer},
+  arxiv={2409.03460}
 }
 
 @misc{manigrasso2024onlineepisodicmemoryvisual,
