prinnevot project page

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -17,7 +17,7 @@
       title={Online Episodic Memory Visual Query Localization with Egocentric Streaming Object Memory}, 
       author={Zaira Manigrasso* and Matteo Dunnhofer* and Antonino Furnari* and Moritz Nottebaum and Antonio Finocchiaro and Davide Marana and Giovanni Maria Farinella and Christian Micheloni},
       year={2024},
-      arxiv={https://arxiv.org/abs/2411.16934}, 
+      arxiv={2411.16934}, 
 }
 
 @article{dunnhofer2024visual,
@@ -42,7 +42,7 @@
   video={https://www.youtube.com/watch?v=Aos5iKrYM5o},
   code={https://github.com/matteo-dunnhofer/SkiTB-toolkit},
   website={https://machinelearning.uniud.it/datasets/skitb/},
-  arxiv={https://arxiv.org/abs/2312.09723}
+  arxiv={2312.09723}
 }
 
 @article{dunnhofer2023visual,
@@ -50,7 +50,7 @@
   author={Dunnhofer, Matteo and Furnari, Antonino and Farinella, Giovanni Maria and Micheloni, Christian},
   journal={International Journal of Computer Vision},
   html={https://link.springer.com/article/10.1007/s11263-022-01694-6},
-  arxiv={https://arxiv.org/abs/2209.13502},
+  arxiv={2209.13502},
   code={https://github.com/matteo-dunnhofer/TREK-150-toolkit},
   website={https://machinelearning.uniud.it/datasets/trek150/},
   year={2023},
@@ -65,7 +65,7 @@
   booktitle={IEEE/CVF Conference on Computer Vision and Pattern Recognition (CVPR), CVsports workshop},
   html={https://openaccess.thecvf.com/content/CVPR2023W/CVSports/html/Dunnhofer_Visualizing_Skiers_Trajectories_in_Monocular_Videos_CVPRW_2023_paper.html},
   video={https://youtu.be/JPQ6EeOaon0},
-  arxiv={https://arxiv.org/abs/2304.02994},
+  arxiv={2304.02994},
   website={https://machinelearning.uniud.it/projects/eyof2023/},
   year={2023},
   preview={cvprw2023.jpg},
@@ -140,7 +140,7 @@
   author={Dunnhofer, Matteo and Micheloni, Christian},
   booktitle={International Conference on Pattern Recognition (ICPR)},
   html={https://ieeexplore.ieee.org/document/9956082},
-  arxiv={https://arxiv.org/abs/2205.04261},
+  arxiv={2205.04261},
   code={https://github.com/matteo-dunnhofer/CoCoLoT},
   year={2022},
   organization={IEEE}
@@ -162,7 +162,7 @@
   journal={IEEE Robotics and Automation Letters},
   html={https://ieeexplore.ieee.org/document/9394708},
   video={https://youtu.be/3T3BJudDSwQ},
-  arxiv={http://arxiv.org/abs/2103.14496},
+  arxiv={2103.14496},
   year={2021},
   publisher={IEEE},
   preview={ral2021.jpg},
@@ -217,7 +217,7 @@
   booktitle={IEEE/CVF International Conference on Computer Vision (ICCV), Visual Object Tracking Challenge VOT2021 workshop},
   html={},
   video={https://www.youtube.com/watch?v=oX1nICHgEJM},
-  arxiv={https://arxiv.org/abs/2108.13665},
+  arxiv={2108.13665},
   code={https://github.com/matteo-dunnhofer/TREK-150-toolkit},
   website={https://machinelearning.uniud.it/datasets/trek150/},
   year={2021}
@@ -270,7 +270,7 @@
   video={https://youtu.be/VzeoHQQl-rA},
   code={https://github.com/matteo-dunnhofer/vot-kd-rl},
   website={https://accv2020.github.io/miniconf/poster_141.html},
-  arxiv={https://arxiv.org/abs/2007.04108},
+  arxiv={2007.04108},
   preview={accv2020.jpg},
   selected={true}
 }
@@ -289,7 +289,7 @@
   author={Dunnhofer, Matteo and Martinel, Niki and Micheloni, Christian},
   booktitle={European Conference on Computer Vision (ECCV), Visual Object Tracking Challenge VOT2020 workshop},
   html={https://link.springer.com/chapter/10.1007%2F978-3-030-68238-5_41},
-  arxiv={http://arxiv.org/abs/2008.00992},
+  arxiv={2008.00992},
   video={https://youtu.be/9af8zsoXeE8},
   year={2020},
   organization={Springer, Cham}
@@ -300,7 +300,7 @@
   author={Dunnhofer, Matteo and Martinel, Niki and Luca Foresti, Gian and Micheloni, Christian},
   booktitle={IEEE/CVF International Conference on Computer Vision (ICCV), Visual Object Tracking Challenge VOT2019 workshop},
   html={http://openaccess.thecvf.com/content_ICCVW_2019/html/VOT/Dunnhofer_Visual_Tracking_by_Means_of_Deep_Reinforcement_Learning_and_an_ICCVW_2019_paper.html},
-  arxiv={https://arxiv.org/abs/1909.08487},
+  arxiv={1909.08487},
   video={ttps://youtu.be/jSGLafk4-G4},
   poster={https://drive.google.com/file/d/1TLq1UtptYcSr2wMEnRfIatCZJpwV7Z88/view?usp=sharing},
   year={2019},
