prinnevot project page

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,6 +3,15 @@
 
 @string{aps = {American Physical Society,}}
 
+@inproceedings{dunnhofer2025vss,
+  title={Dynamic Object Processing in Macaque IT Cortex: Temporal Dynamics and Model Limitations},
+  author={Dunnhofer, Matteo and Micheloni, Christian and Kar, Kohitij},
+  booktitle={Vision Sciences Society (VSS) Meeting 2025},
+  year={2025},
+  html={https://www.visionsciences.org/presentation/?id=2723},
+
+}
+
 @inproceedings{nottebaum2024lowformer,
   title={LowFormer: Hardware Efficient Design for Convolutional Transformer Backbones},
   author={Nottebaum, Moritz and Dunnhofer, Matteo and Micheloni, Christian},
