--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -6,7 +6,7 @@
 @inproceedings{dunnhofer2025vss,
   title={Dynamic Object Processing in Macaque IT Cortex: Temporal Dynamics and Model Limitations},
   author={Dunnhofer, Matteo and Micheloni, Christian and Kar, Kohitij},
-  booktitle={Vision Sciences Society (VSS) Meeting 2025},
+  booktitle={Vision Sciences Society (VSS) Meeting},
   year={2025},
   html={https://www.visionsciences.org/presentation/?id=2723},
 
